Fix linter errors: remove unused imports, fix deprecated methods, clean up redundant code
- Remove unused imports from TaterzensClient, TeleportCommand, SkinCommand, FabricPlatform
- Replace deprecated URL constructor with URI.create().toURL()
- Replace deprecated handleAttack() with skipAttackFrom()
- Remove redundant RangedAttackMob interface (already in CrossbowAttackMob)
- Replace deprecated FabricEntityTypeBuilder with EntityType.Builder
- Remove unused variables and methods
- Project now builds successfully with fewer linter warnings